// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Flex Flex 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm fZKVTx"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex IE11 minHeight solution 1 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm eYrHwb"
      height="400px"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
    <p
      class="sc-AxhCb hpmHVQ"
      color="currentColor"
      font-size="16px"
    >
      This solution involves using height instead min-height.
    </p>
  </div>
</div>
`;

exports[`Storyshots Flex IE11 minHeight solution 2 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm drmJZx"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-AxjAm fZKVTx"
        style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
      >
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          1
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          2
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          3
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          4
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          5
        </div>
      </div>
    </div>
    <p
      class="sc-AxhCb hpmHVQ"
      color="currentColor"
      font-size="16px"
    >
      This solution involves wrapping Flex element with another Flex element with column direction..
    </p>
  </div>
</div>
`;

exports[`Storyshots Flex With custom order 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm fZKVTx"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jeXUhB"
        order="1"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jpYpSf"
        order="3"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 frZDCe"
        order="2"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jjupVN"
        order="5"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 flvDFM"
        order="4"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to center 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm fMYsrt"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to flex-end 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm PbWXf"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to flex-start 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm kqcjHY"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex alignItems set to stretch (default) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm jTwUuZ"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexDirection set to column 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm drmJZx"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexDirection set to column-reverse 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm eCeAlY"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexDirection set to row-reverse 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm kEeoXE"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexWrap set to no-wrap (default) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 hLZXXF"
      width="500"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-AxjAm dIUZyb"
        style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
      >
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          1
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          2
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          3
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          4
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          5
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          6
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          7
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexWrap set to wrap 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 hLZXXF"
      width="500"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-AxjAm gtcHnC"
        style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
      >
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          1
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          2
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          3
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          4
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          5
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          6
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          7
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex flexWrap set to wrap-reverse 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 hLZXXF"
      width="500"
    >
      <div
        class="Box-sc-1qu1edy-0 sc-AxjAm hSEnBr"
        style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
      >
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          1
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          2
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          3
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          4
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          5
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          6
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
          style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
        >
          7
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to center 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm CFkNF"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to flex-end 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm iyOZMn"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to flex-start (default) 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm lhuTyk"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to space-around 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm krUyOQ"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to space-between 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm APdvp"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex justifyContent set to space-evenly 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 sc-AxjAm icnYye"
      style="box-sizing:content-box;padding:24px;background:#f0f2f5;min-height:400px"
    >
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        1
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        2
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        3
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        4
      </div>
      <div
        class="Box-sc-1qu1edy-0 jlPsmj"
        style="padding:48px;background:#c0c8d1;outline:2px dotted #434d59"
      >
        5
      </div>
    </div>
  </div>
</div>
`;
